Fix alignment on footer

--- a/_sass/core.scss
+++ b/_sass/core.scss
@@ -5,3 +5,12 @@
   box-shadow: 0 5px #b54f1b;
   border-width: 0;
 }
+
+
+footer .container {
+  padding-top: 2%;
+}
+
+footer .logo {
+  margin: 2%;
+}
